# crew-ai-samples

./: .gitignore  README.md  requirements.txt
ai_latest_development/: .env.example  README.md  pyproject.toml  report.md
ai_latest_development/src/ai_latest_development/: crew.py  main.py
ai_news/: .env.example  README.md  pyproject.toml
ai_news/news/: 2024-11-11_12-18-34_news_article.md  2024-11-11_12-18-34_openai_news_article.md  2024-11-11_news_article.md
code_execution/: README.md  pyproject.toml
code_execution/src/code_execution/: crew.py  main.py
code_execution/src/code_execution/config/: tasks.yaml
meeting_minutes/: .env.example  README.md
meeting_minutes/src/meeting_minutes/crews/gmailcrew/tools/: gmail_tool.py
pdf_rag/: README.md
pdf_rag/src/pdf_rag/: crew.py  main.py
poem_flow/: .env.example  README.md  poem.txt  pyproject.toml
poem_flow/src/poem_flow/: main.py
